# theminimalmixologist.com

./: .editorconfig  .gitignore  README.md  pyproject.toml  upload.py
.github/workflows/: deploy.yml
infrastructure/: .gitignore  providers.tf  resources.tf
infrastructure/templates/: s3-policy.json
website/: config.toml
website/content/: about.md  contact.md  pricing.md
website/content/pricing/: fine-print.md
website/sass/: about.scss  base.scss  colors.scss  contact.scss  fonts.scss  index.scss  pricing.scss  reset.scss  utils.scss  vars.scss
website/templates/: 404.html  about.html  base.html  contact.html  index.html  page.html  pricing.html
